...

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images_button" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/remove_tab_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />


    <Button
...
